--- a/app/src/main/res/layout/activity_ipc_main.xml
+++ b/app/src/main/res/layout/activity_ipc_main.xml
@@ -1,19 +1,28 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray"
-    android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:paddingTop="20dp" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@color/gray"
+             android:orientation="vertical"
+             android:paddingLeft="5dp"
+             android:paddingRight="5dp"
+             android:paddingTop="20dp">
 
     <ListView
         android:id="@+id/device_ipc_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="#00000000"
-        android:dividerHeight="10dp" >
+        android:dividerHeight="10dp">
     </ListView>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/ipc_main_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="未添加摄像机,请点击右上角添加!"
+        android:textColor="@color/btntextcolor"
+        android:textSize="20dp"
+        android:visibility="gone"/>
+</FrameLayout>
