--- a/app/src/main/res/layout/time_task_dialog.xml
+++ b/app/src/main/res/layout/time_task_dialog.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:background="@drawable/yuanjiao"
               android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/update_task_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/time_task_dialog_top_selector"
         android:orientation="vertical"
         android:paddingLeft="100dp"
         android:paddingRight="100dp">
@@ -32,6 +32,7 @@
         android:id="@+id/close_task_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/time_task_item_bg"
         android:orientation="vertical"
         android:paddingLeft="100dp"
         android:paddingRight="100dp">
@@ -55,6 +56,7 @@
         android:id="@+id/delect_task_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/time_task_dialog_bot_selector"
         android:orientation="vertical"
         android:paddingLeft="100dp"
         android:paddingRight="100dp">
