--- a/app/src/main/res/layout/time_task_list_item.xml
+++ b/app/src/main/res/layout/time_task_list_item.xml
@@ -2,20 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@drawable/time_tesk_ig"
               android:orientation="vertical"
-              android:paddingBottom="10dp"
-              android:paddingLeft="10dp"
-              android:paddingRight="10dp"
-              android:paddingTop="10dp"
-
-
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/time_tesk_ig"
         android:orientation="vertical"
+        android:padding="10dp"
         >
 
         <FrameLayout
@@ -169,7 +164,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/time_task_do"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="状态:"
@@ -177,6 +172,7 @@
                     android:textSize="18sp"/>
 
                 <TextView
+                    android:id="@+id/time_task_do"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
