--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -4,6 +4,18 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
+
+    <CheckBox
+        android:id="@+id/msg_item_check"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="5dp"
+        android:background="@drawable/checkbox_selector"
+        android:button="@null"
+        android:visibility="visible"
+        />
+
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
