--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#f19149"
-    android:gravity="center_vertical"
-    android:orientation="horizontal" >
+              android:layout_width="match_parent"
+              android:layout_height="45dp"
+              android:background="#f19149"
+              android:gravity="center_vertical"
+              android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/left_layout"
@@ -14,21 +14,22 @@
         android:layout_marginLeft="10dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/left_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/back" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/left_back_selector"
+            android:textColor="@color/back"/>
 
         <TextView
             android:id="@+id/left_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="列表"
+
             android:textColor="@color/back"
-            android:textSize="15sp" />
+            android:textSize="15sp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -36,7 +37,7 @@
         android:layout_height="40dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title_center_text"
@@ -46,7 +47,7 @@
             android:layout_marginTop="5dp"
             android:text="设备列表"
             android:textColor="@color/back"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -55,24 +56,24 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="right|center_vertical"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/right_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:text="完成"
             android:textColor="@color/back"
-            android:textSize="15sp" />
+            android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/right_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/right_finsh_selector"
             android:textColor="@color/back"
-            android:textSize="15sp" />
+            android:textSize="15sp"/>
     </LinearLayout>
 
 </LinearLayout>
